<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ProfileActivity" >

    <RelativeLayout
        android:id="@+id/rl_profile_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >

        <ImageView
            android:id="@+id/iv_profile_image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginRight="15dp"
            android:src="@android:drawable/screen_background_dark_transparent" />

        <TextView
            android:id="@+id/tv_profile_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/iv_profile_image"
            android:text="@string/name"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_profile_tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@id/tv_profile_name"
            android:layout_below="@id/tv_profile_name"
            android:layout_toRightOf="@+id/iv_profile_image"
            android:text="@string/tag"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/llCounts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_profile_header"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_profile_follower"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/follower"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_profile_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="@string/following"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/llCounts"
        android:layout_below="@+id/llCounts"
        android:layout_marginBottom="14dp"
        tools:layout="@layout/fragment_tweet_list" />

</RelativeLayout>